--- a/player.html
+++ b/player.html
@@ -75,7 +75,9 @@
                                 d="M4 6h16M4 10h16M4 14h16M4 18h16"></path>
                         </svg>
                         <!-- 排序箭头 -->
-                        <svg class="w-4 h-4 episode-order-arrow" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <svg class="w-4 h-4 episode-order-arrow cursor-pointer hover:scale-110 transition-transform" 
+                             fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                             onclick="toggleEpisodeOrder(event)">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
                                 d="M7 14l5-5 5 5"></path>
                         </svg>
