--- a/player.html
+++ b/player.html
@@ -119,6 +119,16 @@
 
                 <!-- 右侧功能按钮组 -->
                 <div class="flex items-center gap-2 right-buttons">
+                    <!-- 收藏按钮 -->
+                    <button id="favoriteToggle" onclick="toggleFavorite()" title="收藏/取消收藏"
+                        class="p-2 bg-[#222] hover:bg-[#333] border border-[#333] text-white rounded-lg transition-colors flex items-center justify-center">
+                        <svg id="favoriteIcon" class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <!-- 默认状态：未收藏（空心五角星） -->
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M11.48 3.499a.562.562 0 011.04 0l2.125 5.111a.563.563 0 00.475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 00-.182.557l1.285 5.385a.562.562 0 01-.84.61l-4.725-2.885a.562.562 0 00-.586 0L6.982 20.54a.562.562 0 01-.84-.61l1.285-5.386a.562.562 0 00-.182-.557l-4.204-3.602a.562.562 0 01.321-.988l5.518-.442a.563.563 0 00.475-.345L11.48 3.5z" />
+                        </svg>
+                    </button>
+
                     <!-- 锁定控制按钮 -->
                     <button id="lockToggle" onclick="toggleControlsLock()" title="锁定控制"
                         class="p-2 bg-[#222] hover:bg-[#333] border border-[#333] text-white rounded-lg transition-colors flex items-center justify-center">
@@ -155,7 +165,7 @@
 
     <!-- 引入认证系统 -->
     <script src="js/auth-system.js"></script>
-
+    <script src="js/api.js"></script>
     <script src="libs/hls.min.js" crossorigin="anonymous"></script>
     <script src="libs/DPlayer.min.js" crossorigin="anonymous"></script>
 
